src/objects/RecipeIngredient__c.object
<CustomObject>
    <description>represents the ingredients of a recipe</description>
    <fields>
        <fullName>BrandVariant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the Brand Variant to which it belongs</description>
        <label>Brand Variant</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Recipes Ingredients (Brand Variant)</relationshipLabel>
        <relationshipName>RecipesIngredientsVariant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the brand to which it belongs</description>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Recipes Ingredients</relationshipLabel>
        <relationshipName>RecipesIngredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomIngredient__c</fullName>
        <description>List of custom ingredients that do not belong to any brand</description>
        <label>Custom Ingredient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CustomIngredient</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Field to order ingredients</description>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherIngredient__c</fullName>
        <description>list of other ingredients that do not belong to the brand</description>
        <label>Other Ingredient</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>List of quantities values for an ingredient in the recipe</description>
        <label>Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quantity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <description>Represent the recipe</description>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Recipes Ingredients</relationshipLabel>
        <relationshipName>RecipesIngredients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>List of unit for a quantity in a recipe</description>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <label>Recipe Ingredient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BrandIngredient</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RecipeIngredient__c.BrandIngredient</value>
        </filters>
        <label>Brand Ingredient</label>
    </listViews>
    <listViews>
        <fullName>CustomIngredient</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RecipeIngredient__c.CustomIngredient</value>
        </filters>
        <label>Custom Ingredient</label>
    </listViews>
    <nameField>
        <label>Recipe Ingredient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipes Ingredients</pluralLabel>
    <recordTypes>
        <fullName>BrandIngredient</fullName>
        <active>true</active>
        <description>Represent an Ingredient with Brand</description>
        <label>Brand Ingredient</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomIngredient</fullName>
        <active>true</active>
        <description>Represent an Ingredient without Brand</description>
        <label>Custom Ingredient</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>